--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>TetraAtlas</title>
+	<title>TetraAtlas.Inc</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -59,12 +59,12 @@
 		<!-- Form -->
 		<div class="size3 flex-col-sb flex-w p-l-75 p-r-75 p-t-45 p-b-45 respon1">
 			<div class="wrap-pic1">
-				<img src="images/icons/favicon_io/favicon-32x32.png"alt="LOGO">&nbsp;<strong style="font-size: larger; margin-top: 250px;">TetraAtlas</strong>
+				<img src="images/icons/favicon_io/favicon-32x32.png"alt="LOGO">&nbsp;<strong style="font-size: larger; margin-top: 250px;">TetraAtlas.Inc</strong>
 			</div>
 
 			<div class="p-t-50 p-b-60">
 				<p class="m1-txt1 p-b-36">
-					Our website is <span class="m1-txt2">Coming Soon</span>, follow us for update now!
+					Our website is <span class="m1-txt2">Coming Soon</span>, Email us for any enquiries!
 				</p>
 
 				<form class="contact100-form validate-form d-none">
